parcial JWT e Autenticação

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,12 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=Loja;User Id=sa;Password=@devJR123;MultipleActiveResultSets=true;Encrypt=YES;TrustServerCertificate=YES"
+  },
+  "AllowedHosts": "*",
+  "JwtBearerTokenSettings": {
+    "SecretKey": "A@fderwfQQSDXCCer34",
+    "Audience": "Audience",
+    "Issuer": "LojaAPI",
+    "ExpiryTimeSeconds": 60
   }
 }
