--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=Loja;User Id=sa;Password=@devJR123;MultipleActiveResultSets=true;Encrypt=YES;TrustServerCertificate=YES"
+    "DefaultConnection": "Server=ASPIRE5-MURIEL;Database=Loja;User Id=sa;Password=@devJR123;MultipleActiveResultSets=true;Encrypt=YES;TrustServerCertificate=YES"
   },
   "AllowedHosts": "*",
   "JwtBearerTokenSettings": {
