--- a/LojaAPI.csproj
+++ b/LojaAPI.csproj
@@ -7,27 +7,27 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Using Include="Microsoft.Data.SqlClient"/>
-    <Using Include="Microsoft.EntityFrameworkCore"/>
-    <Using Include="Microsoft.AspNetCore.Identity"/>
-    <Using Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore"/>
-    <Using Include="Microsoft.AspNetCore.Mvc"/>
-    <Using Include="Microsoft.AspNetCore.Authorization"/>
-    <Using Include="Microsoft.AspNetCore.Authentication.JwtBearer"/>
-    <Using Include="Microsoft.IdentityModel.Tokens;"/>
-    <Using Include="System.IdentityModel.Tokens.Jwt"/>
-    <Using Include="System.Security.Claims"/>
-    <Using Include="System.Text"/>
-    <Using Include="Flunt.Notifications"/>
-    <Using Include="Flunt.Validations"/>
-    <Using Include="Dapper"/>
+    <Using Include="Microsoft.Data.SqlClient" />
+    <Using Include="Microsoft.EntityFrameworkCore" />
+    <Using Include="Microsoft.AspNetCore.Identity" />
+    <Using Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
+    <Using Include="Microsoft.AspNetCore.Mvc" />
+    <Using Include="Microsoft.AspNetCore.Authorization" />
+    <Using Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
+    <Using Include="Microsoft.IdentityModel.Tokens;" />
+    <Using Include="System.IdentityModel.Tokens.Jwt" />
+    <Using Include="System.Security.Claims" />
+    <Using Include="System.Text" />
+    <Using Include="Flunt.Notifications" />
+    <Using Include="Flunt.Validations" />
+    <Using Include="Dapper" />
 
-    <Using Include="LojaAPI.Infra.Database"/>
-    <Using Include="LojaAPI.Dominio.Produtos"/>
-    <Using Include="LojaAPI.Endpoints.Funcionarios"/>
-    <Using Include="LojaAPI.Endpoints.Segurança"/>
-    <Using Include="LojaAPI.Endpoints.Produtos"/>
-    <Using Include="LojaAPI.Endpoints.Categorias"/>
+    <Using Include="LojaAPI.Infra.Database" />
+    <Using Include="LojaAPI.Dominio.Produtos" />
+    <Using Include="LojaAPI.Endpoints.Funcionarios" />
+    <Using Include="LojaAPI.Endpoints.Segurança" />
+    <Using Include="LojaAPI.Endpoints.Produtos" />
+    <Using Include="LojaAPI.Endpoints.Categorias" />
  
   </ItemGroup>
   
@@ -42,6 +42,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.7.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
