--- a/LojaAPI.csproj
+++ b/LojaAPI.csproj
@@ -25,6 +25,7 @@
     <Using Include="LojaAPI.Infra.Database" />
     <Using Include="LojaAPI.Dominio.Produtos" />
     <Using Include="LojaAPI.Dominio.Usuarios" />
+    <Using Include="LojaAPI.Dominio.Pedidos" />
     <Using Include="LojaAPI.Endpoints.Funcionarios" />
     <Using Include="LojaAPI.Endpoints.Segurança" />
     <Using Include="LojaAPI.Endpoints.Produtos" />
